@@ -44,6 +44,11 @@ ubiquity (1.12.0) UNRELEASED; urgency=low
   * Partitions bars show and hide as appropriate
   * Proper projection points for the cities in kde Timezone map
 
+  [ Mario Limonciello ]
+  * Mythbuntu:
+    - Don't prevent going forward in the UI if the connection test fails.
+      It's no longer necessary for 9.04 to actually work. (LP: #343432)
+
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Mar 2009 12:02:04 +0000
 
 ubiquity (1.11.20) jaunty; urgency=low
